Fix for visual trails on slider being left behind when moving the slider

--- a/chrome/spdr-styles.css
+++ b/chrome/spdr-styles.css
@@ -50,6 +50,7 @@
 
 .ui-slider-handle {
 	border-color: blue !important;
+	outline: 1px solid transparent;
 }
 
 .spdr-input {
